--- a/puma.html
+++ b/puma.html
@@ -53,7 +53,7 @@
     <div class="wrapper">
         <div class="grid-row">
             <section class="writeup-section grid-col-4of12">
-                <h2 class="section-title">High Level User Flow</h2>
+                <h2 class="section-title">User Flow</h2>
                 <p>
 					Throughout the project, multiple iterations were required as the pavilion's floor plan and technology choices evolved. The diagram below shows the final high-level flow from entry to exit, with each collapsed section detailing the specific user interactions within the experience.
                 </p>
@@ -76,7 +76,6 @@
                 <p>
 					Before running, users create a personalized Puma avatar to represent themselves in the virtual world. To highlight technology at the forefront, I explored motion gestures for interacting with the personalization screens. Based on research, I selected the most intuitive movements to ensure usability and smooth onboarding. Component layout—size, placement, and distance from the user—was carefully considered so all selections remain easily accessible from a single standing position.
                 </p>
-                
             </section>
 
             <section class="visuals-section grid-col-8of12">
@@ -233,35 +232,22 @@
 		</div>
     </div>
 
-    
-
-
-
-
     <div class="outcome-section">
         <div class="wrapper">
             <div class="title">
-                <h2>Collaboration & Implementation</h2>
+                <h2>Reflection</h2>
             </div>
             <div class="body">
                 <p>
-                    Throughout the process, we worked closely with the development team to ensure design feasibility and technical alignment. We made sure the final product stayed true to the vision while being technically sound.
+                    This was my first time designing for gesture-based interactions, and it pushed me to think beyond the screen and consider the physical, three-dimensional space the experience would live in. It was exciting to imagine how visitors would move within the room—how far they'd stand from the sensor, how large the interaction zone needed to be, and how arm movements or hover gestures could be used for selection.
+				</p>
+				<br>
+				<p>
+					The lack of access to the actual hardware made the early stages a bit challenging, especially when trying to understand the system's real-world limitations. But the research phase was genuinely fun and eye-opening. Learning about gesture ranges, detection distances, ergonomics, and dwell-based selection helped me design interactions that felt intuitive and feasible. Overall, it was a valuable deep-dive into spatial UI thinking and emerging interaction patterns.
                 </p>
             </div>
         </div>
-        <div class="wrapper">
-            <div class="title">
-                <h2>Impact</h2>
-            </div>
-            <div class="body">
-                <p>
-                    The result is a sleek, intuitive device that preserves Montblanc's craftsmanship while embracing modern digital technology, setting a new benchmark in luxury digital writing. It embodies Montblanc's philosophy that everyone can leave their mark, offering the next generation the same tactile precision and joy — now in a more seamless, digital form.
-                </p>  
-            </div>
-        </div>
     </div>
-
-
 
 
 
