--- a/alice.html
+++ b/alice.html
@@ -27,41 +27,37 @@
 
     <div id="site-header"></div>
 
-    <div class="grid-row" style="width:calc(100% - 48px)">
-        <section class="writeup-section grid-col-4of12">
-            <h1 class="project-title">ALICE'S ADVENTURES IN WONDERLAND</h1>
-            <p>
-                I reimagined key spreads from Alice's Adventures in Wonderland, using the book's rumored psychedelic influences as the foundation for a bold visual reinterpretation. Here are a few of the final spreads.
-            </p>
+     <div class="wrapper">
+        <div class="grid-row" style="width:calc(100% - 48px)">
+            <section class="writeup-section grid-col-4of12">
+                <h1 class="project-title">ALICE'S ADVENTURES IN WONDERLAND</h1>
+                <p>
+                    I redesigned multiple spreads from Alice's Adventures in Wonderland by Lewis Carroll, using the book's rumored psychedelic influences as the foundation for a bold visual reinterpretation. Here are a few of the final spreads.
+                </p>
 
-            <ul class="project-specs">
-              <li>Typography Manipulation</li>
-              <li>Layout Design</li>
-          </ul>
-        </section>
+                <ul class="project-specs">
+                <li>Typography Manipulation</li>
+                <li>Layout Design</li>
+                <!--<li>Coptic Stitch Binding</li>-->
+            </ul>
+            </section>
 
-        <section class="visuals-section grid-col-8of12">
-            <div class="grid-col-4of12">
+            <section class="grid-col-4of12">
                 <div class="project-image">
                     <img src="media/alice/img/alice_1.png">
                 </div>
-            </div>
-            <div class="grid-col-4of12">
+            </section>
+            <section class="grid-col-4of12">
                 <div class="project-image">
                     <img src="media/alice/img/alice_2.png">
                 </div>
-            </div>
             </section>
-    </div>
+        </div>
+        </div>
 
     <div class="wrapper">
         <div class="grid-row" style="width:calc(100% - 48px)">
             <section class="grid-col-4of12">
-				<div class="project-image">
-					<img src="media/alice/img/alice_2.png">
-				</div>
-			</section>
-			<section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_3.png">
 				</div>
@@ -71,15 +67,15 @@
 					<img src="media/alice/img/alice_4.png">
 				</div>
 			</section>
-        </div>
-
-        <div class="grid-row" style="width:calc(100% - 48px)">
-            <section class="grid-col-4of12">
+			<section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_5.png">
 				</div>
 			</section>
-			<section class="grid-col-4of12">
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 48px)">
+            <section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_6.png">
 				</div>
@@ -89,15 +85,15 @@
 					<img src="media/alice/img/alice_7.png">
 				</div>
 			</section>
-        </div>
-
-        <div class="grid-row" style="width:calc(100% - 48px)">
-            <section class="grid-col-4of12">
+			<section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_8.png">
 				</div>
 			</section>
-			<section class="grid-col-4of12">
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 48px)">
+            <section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_9.png">
 				</div>
@@ -107,15 +103,15 @@
 					<img src="media/alice/img/alice_10.png">
 				</div>
 			</section>
-        </div>
-
-        <div class="grid-row" style="width:calc(100% - 48px)">
-            <section class="grid-col-4of12">
+			<section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_11.png">
 				</div>
 			</section>
-			<section class="grid-col-4of12">
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 48px)">
+            <section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_12.png">
 				</div>
