nov 24 bug report, about bg image

--- a/about.html
+++ b/about.html
@@ -38,15 +38,18 @@
           I thrive on turning ideas into things you can see, touch, and experience—whether in pixels or physical form. My approach to design is shaped by curiosity—always exploring, questioning, and seeking unexpected solutions.
         </p>
         <br>
-        <p>A traveler at heart, I find inspiration everywhere—whether in a bustling city, a quiet mountain village, or a random conversation with strangers. I'm always open to new perspectives, unconventional ideas, and meaningful connections. Let’s chat!</p>
+        <p>
+          I find inspiration everywhere — whether in a bustling city, a quiet mountain village, or a random conversation with strangers. I'm always open to new perspectives and meaningful connections. Let's chat!
+        </p>
       </div>
       
       <!-- Fullscreen background carousel (desktop only) -->
       <div class="about-carousel" aria-hidden="false">
         <div class="about-slides">
           <div class="slide" data-src="media/about/voorlinden.jpeg" style="background-image:url('media/about/voorlinden.jpeg')"></div>
-          <div class="slide" data-src="media/about/dolomiti.jpeg" style="background-image:url('media/about/dolomiti.jpeg')"></div>
-          <div class="slide" data-src="media/about/paris.jpeg" style="background-image:url('media/about/paris.jpeg')"></div>
+          <div class="slide" data-src="media/about/dolomiti_2.png" style="background-image:url('media/about/dolomiti_2.png')"></div>
+          <div class="slide" data-src="media/about/kunsthal.png" style="background-image:url('media/about/kunsthal.png')"></div>
+          <div class="slide" data-src="media/about/dolomiti_3.png" style="background-image:url('media/about/dolomiti_3.png')"></div>
         </div>
 
         <div class="controls" aria-hidden="false">
