nov 24 about infos

--- a/about.html
+++ b/about.html
@@ -35,12 +35,24 @@
  
       <div class="about-paragraph">
         <p>
-          I thrive on turning ideas into things you can see, touch, and experience—whether in pixels or physical form. My approach to design is shaped by curiosity—always exploring, questioning, and seeking unexpected solutions.
+          I love turning ideas into things you can see, touch, and experience — whether digital or physical. Guided by curiosity, I'm always exploring, questioning, and seeking fresh perspectives. Inspiration comes from everywhere: bustling cities, quiet mountain villages, and even chance conversations. Let's chat!
         </p>
         <br>
+        <h2 style="font-family: spaceMono; font-weight: 600;">EXPERIENCES</h2>
         <p>
-          I find inspiration everywhere — whether in a bustling city, a quiet mountain village, or a random conversation with strangers. I'm always open to new perspectives and meaningful connections. Let's chat!
+          <span><a href="https://www.akqa.com/">AKQA</a> - Product Designer 2022-2025</span>
+          <br>
+          <span><a href="https://trengo.com/">Trengo</a> - Product Designer 2021</span>
+          <br>
+          <span><a href="https://www.monks.com/">Media.Monks</a> - Freelance UX Designer 2021</span>
+          <br>
+          <span><a href="https://www.monks.com/">Media.Monks</a> - UX Design Intern 2019</span>
         </p>
+        <br>
+        <h2 style="font-family: spaceMono; font-weight: 600;">CLIENTS</h2>
+        <p>
+          <span>Adidas / Google / Jacobs Douwe Egberts / Kia / Lexus / Lufthansa / Montblanc / Puma / Somersby / Toyota</span>
+
       </div>
       
       <!-- Fullscreen background carousel (desktop only) -->
