nov 25 about drag reset default position on refresh

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
     <div id="site-header"></div>
  
-      <div class="about-paragraph" id="about-paragraph" draggable="true">
+      <div class="about-paragraph">
         <p>
           Hey, I'm Maggie! A Product Designer based in Amsterdam. I love turning ideas into things you can see, touch, and experience — whether digital or physical. Guided by curiosity, I'm always exploring, questioning, and seeking fresh perspectives. Inspiration comes from everywhere: bustling cities, quiet mountain villages, and even chance conversations. <a href="mailto:maggieliujx@gmail.com">Let's chat!</a>
         </p>
@@ -58,9 +58,10 @@
       <div class="about-carousel" aria-hidden="false">
         <div class="about-slides">
           <div class="slide" data-src="media/about/voorlinden.jpeg" style="background-image:url('media/about/voorlinden.jpeg')"></div>
+          <div class="slide" data-src="media/about/dolomiti_1.png" style="background-image:url('media/about/dolomiti_1.png')"></div>
+          <div class="slide" data-src="media/about/marina.png" style="background-image:url('media/about/marina.png')"></div>
           <div class="slide" data-src="media/about/dolomiti_2.png" style="background-image:url('media/about/dolomiti_2.png')"></div>
-          <div class="slide" data-src="media/about/kunsthal.png" style="background-image:url('media/about/kunsthal.png')"></div>
-          <div class="slide" data-src="media/about/dolomiti_3.png" style="background-image:url('media/about/dolomiti_3.png')"></div>
+          <div class="slide" data-src="media/about/panorama.png" style="background-image:url('media/about/panorama.png')"></div>
         </div>
 
         <div class="controls" aria-hidden="false">
