nov 25 footer email

--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
           <br>
           <span><a href="https://trengo.com/">Trengo</a> - Product Designer 2021</span>
           <br>
-          <span><a href="https://www.monks.com/">Media.Monks</a> - Freelance UX Designer 2021</span>
+          <span><a href="https://www.monks.com/">Monks</a> - Freelance UX Designer 2021</span>
           <br>
-          <span><a href="https://www.monks.com/">Media.Monks</a> - UX Design Intern 2019</span>
+          <span><a href="https://www.monks.com/">Monks</a> - UX Design Intern 2019</span>
         </p>
         <br>
         <h2 style="font-family: spaceMono; font-weight: 600;">CLIENTS</h2>
