--- a/jde.html
+++ b/jde.html
@@ -61,7 +61,7 @@
                 Before defining new styles or components, I conducted a thorough audit of JDE's partially built design system to understand what existed, what could be reused, and where gaps remained.
             </p>
             <p>
-                From there, we established foundational styles — such as colour, typography, and spacing — using design tokens. This token-based system allowed us to rapidly theme for each brand and make updates efficiently, while ensuring alignment with the developers' existing implementation. Collaborating closely with engineering, we refined a shared token structure that enabled consistency and maintainability across all 40+ brands.
+                From there, we established foundational styles — such as colour, typography, and spacing — using design tokens. This token-based system allowed us to rapidly theme for each brand and make updates efficiently, while ensuring alignment with the developers' existing implementation. Collaborating closely with engineering, we refined a shared token structure that enabled consistency and maintainability.
             </p>
         </section>
 
@@ -129,7 +129,7 @@
 
     <div class="grid-row">
         <section class="visuals-section grid-col-12of12">
-            <h2 class="section-title" style="font-weight: bold;">Portfolio of Brands</h2>
+            <h2 class="section-title" style="font-weight: bold;">Brand Portfolio</h2>
             <br>
             <br>
             <div class="visual-grid">
