--- a/jde.html
+++ b/jde.html
@@ -61,7 +61,7 @@
                 Before defining new styles or components, I conducted a thorough audit of JDE's partially built design system to understand what existed, what could be reused, and where gaps remained.
             </p>
             <p>
-                From there, we established foundational styles — such as colour, typography, and spacing — using design tokens. This token-based system allowed us to rapidly theme for each brand and make updates efficiently, while ensuring alignment with the developers' existing implementation. Collaborating closely with engineering, we refined a shared token structure that enabled consistency and maintainability.
+                From there, we set up foundational styles using design tokens, which let us store core design decisions like colours, typography, spacing, and more. By giving each token a clear role, we can create themes—sets of token values that define the look and feel of a brand. And applying different themes to the same components allows each brand to express their unique visual identity while keeping a shared structure.
             </p>
         </section>
 
