--- a/alice.html
+++ b/alice.html
@@ -36,10 +36,10 @@
                 </p>
 
                 <ul class="project-specs">
-                <li>Typography Manipulation</li>
-                <li>Layout Design</li>
-                <!--<li>Coptic Stitch Binding</li>-->
-            </ul>
+                    <li>Typography Manipulation</li>
+                    <li>Layout Design</li>
+                    <li>Coptic Stitch Binding</li>
+                </ul>
             </section>
 
             <section class="grid-col-4of12">
@@ -114,6 +114,11 @@
             <section class="grid-col-4of12">
 				<div class="project-image">
 					<img src="media/alice/img/alice_12.png">
+				</div>
+			</section>
+            <section class="grid-col-4of12">
+				<div class="project-video">
+					<video src="media/alice/vd/alice_flip.mp4" autoplay loop muted></video>
 				</div>
 			</section>
         </div>
