--- a/jde.html
+++ b/jde.html
@@ -43,12 +43,12 @@
               <li>Interaction & motion design</li>
               <li>Accessibility & performance</li>
               <li>Front-end implementation</li>
-          </ul>
+            </ul>
         </section>
 
         <section class="visuals-section grid-col-7of12">
             <div class="project-image">
-                <img src="media/jde/jde_cover.png" alt="Jacobs Douwe Egberts Project" />
+                <img src="media/jde/img/jde_cover.png" alt="Jacobs Douwe Egberts Project" />
             </div>
         </section>
     </div>
@@ -68,76 +68,105 @@
         <section class="visuals-section grid-col-8of12">
             <div class="vertical-stack">
                 <div class="project-image">
-                    <img src="media/jde/token_map.png">
+                    <img src="media/jde/img/groundwork.png">
                 </div>
-                <div class="project-image">
-                    <img src="media/jde/font.png">
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <div class="grid-col-12of12">
-            <img src="media/jde/grid.png">
-        </div>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-3of12">
-            <h2 class="section-title">Component library</h2>
-            <p>
-                The component library uses atomic design principles, creating flexible and easy-to-use components and simplifying maintenance.
-            </p>
-        </section>
-
-        <section class="visuals-section grid-col-9of12">
-            <div class="project-image">
-                <img src="media/jde/atomic.png">
             </div>
         </section>
     </div>
 
     <div class="grid-row">
         <section class="writeup-section grid-col-4of12">
-            <h2 class="section-title">Brand alignment & accessibility</h2>
+            <h2 class="section-title">Balancing Brand Identity and Accessibility</h2>
             <p>
-                When brand books were available, we used them to define colours and typography via tokens. For brands without formal guidelines, we referenced their current websites, logos, or packaging and aligned with brand teams for approval. All styles were checked for accessibility, ensuring WCAG compliance while balancing brand authenticity.
-        </section>
-
-        <section class="visuals-section grid-col-4of12">
-            <div class="project-image">
-                <img src="media/jde/accessibility.png">
-            </div>
-        </section>
-    </div>
-
-    <div class="grid-row">
-        <section class="writeup-section grid-col-3of12">
-            <h2 class="section-title">Applied at scale</h2>
+                A major challenge was keeping accessibility consistent across multiple brands. Most brand books we received were designed for print or packaging—not digital—so their colours often failed accessibility standards.
+            </p>
             <p>
-                The design system has been successfully adopted across 40+ brands, demonstrating its flexibility and scalability. By streamlining collaboration with brand teams and developers, the system also simplified the onboarding of new brands into the digital ecosystem.
+                To solve this, we used palette generators to build accessible colour sets using each brand's primary colour as the base. We worked closely with the brands to ensure these adjustments maintain proper contrast while still preserving each brand's visual identity.
+            </p>
+            <p>
+                We still used the brand's primary colour in other ways—accents, highlights, or secondary moments.
             </p>
         </section>
 
-        <section class="visuals-section grid-col-9of12">
+        <section class="visuals-section grid-col-8of12">
             <div class="project-image">
-                <img src="media/jde/scale.png">
+                <img src="media/jde/img/accessibility.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row" style="width:calc(100% - 48px)">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Beyond the White-Label</h2>
+            <p>
+                Even with a flexible white-label system, some brands still need a few tweaks. In those cases, we introduce a small number of custom components that reuse as many of the system's building blocks as possible—keeping the system efficient while giving the brand room to express itself.
+            </p>
+        </section>
+
+        <section class="grid-col-4of12">
+            <div class="project-image">
+                <img src="media/jde/img/beyond_1.png">
+            </div>
+        </section>
+        <section class="grid-col-4of12">
+            <div class="project-image">
+                <img src="media/jde/img/beyond_2.png">
             </div>
         </section>
     </div>
 
     <div class="grid-row">
-        <section class="visuals-section grid-col-12of12">
+        <section class="writeup-section grid-col-4of12">
+            <h2 class="section-title">Dev-Design Alignment</h2>
+            <p>
+                The dev team was already using tokens, but we needed to align on a structure that was logical for developers, intuitive for designers, and scalable for the entire system.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-8of12">
+            <div class="project-image">
+                <img src="media/jde/img/development.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-12of12">
+            <h2 class="section-title" style="font-weight: bold;">Applied at Scale</h2>
+            <br>
+            <br>
+            <div class="visual-grid">
+                <div class="project-image">
+                    <img src="media/jde/img/scale.png">
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="grid-col-12of12">
             <h2 class="section-title" style="font-weight: bold;">Brand Portfolio</h2>
             <br>
             <br>
             <div class="visual-grid">
                 <div class="project-image">
-                    <img src="media/jde/brands.png">
+                    <img src="media/jde/img/brands.png">
                 </div>
             </div>
         </section>
+    </div>
+
+    <div class="outcome-section">
+        <div class="wrapper">
+            <div class="title">
+                <h2>Impact</h2>
+            </div>
+            <div class="body">
+                <p>
+                    The system has been successfully adopted across 40+ brands, proving its flexibility and scalability while streamlining collaboration between design, development, and brand teams. Building a white-label design system is complex and requires a high level of abstraction—every decision must work globally across multiple brands. It also demands an upfront time investment to define a scalable foundation, but that investment pays off as more brands are onboarded.
+                </p>
+            </div>
+        </div>
     </div>
 
     <footer class="hidden">
