--- a/montblanc.html
+++ b/montblanc.html
@@ -31,10 +31,13 @@
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">MONTBLANC</h1>
             <p>
-                Montblanc, a legacy brand renowned for its mastery in luxury writing instruments, has continuously evolved to cater to the modern achiever, creative, and challenger. The brand embarked on a bold journey to merge the timeless elegance of handwriting with cutting-edge digital experiences of an eINK device.
+                Montblanc, a legacy brand renowned for its mastery in luxury writing instruments, has continuously evolved to cater to the modern achiever. The brand embarked on a bold journey to merge the timeless elegance of handwriting with the cutting-edge digital experience of an e-ink device.
             </p>
             <p>
-                We collaborated closely with Montblanc's team, guiding the UX/UI journey from wireframe review to final design handoff.
+                Over two years, we worked closely with Montblanc to shape the vision, define the digital identity, build the design system, craft the user experience, refine haptics, and support industrial design alongside their writing experts in Hamburg.
+            </p>
+            <p>
+                Digital Paper reimagines the art of writing for the modern age. It captures the emotion and nuance of pen on paper—from rubberised nibs that add weight to each stroke, to haptics tuned to echo the flow of ink—celebrating Montblanc's century-long dedication to the writing ritual.
             </p>
 
             <ul class="project-specs">
@@ -48,7 +51,7 @@
 
         <section class="visuals-section grid-col-7of12">
             <div class="project-video">
-                <video src="media/mb/vd/mb_cover.mp4" autoplay loop muted>
+                <video src="media/mb/vd/mb_cover.mp4" autoplay loop muted></video>
             </div>
         </section>
     </div>
@@ -58,7 +61,7 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">Immersion</h2>
                 <p>
-                    To kick off the project, we spent a week embedded with the Montblanc team in Hamburg — an immersive experience where we explored the brand's rich history, delved into their archives, and interacted with early prototypes of the device. This immersion helped us deeply understand Montblanc's values, craft, and ambition for their new writing device.
+                    To kick off the project, we spent a week embedded with the Montblanc team in Hamburg — where we explored the brand's rich history, delved into their archives, and interacted with early prototypes of the device. This immersion helped us further understand Montblanc's values, craft, and ambition for their new writing device.
                 </p>
             </section>
 
@@ -85,7 +88,7 @@
                     <img src="media/mb/img/immersion_4.png">
                 </div>
                 <div class="project-video">
-                    <video src="media/mb/vd/immersion_5.mp4" autoplay loop muted>
+                    <video src="media/mb/vd/immersion_5.mp4" autoplay loop muted></video>
                 </div>
             </section>
         </div>
@@ -99,7 +102,7 @@
                 We set out to capture the soulfulness of handwriting in a digital context. Inspired by Montblanc's long heritage in fine writing instruments, we explored four distinct visual territories to define the right direction. This exploration helped us narrow down to two core creative concepts, ultimately shaping the final visual identity.
             </p>
             <p>
-                Our goal was to translate the emotional resonance of ink on paper into an eInk environment—preserving the natural imperfections, pressure, and personal expression that make handwriting uniquely human.
+                Our goal was to bring the feel of ink on paper into an e-ink environment—preserving the natural imperfections, pressure, and personal expression that make handwriting uniquely human.
             </p>
             <p>
                 Values: Soulfulness, timelessness and simplicity.
@@ -121,8 +124,7 @@
                 <p>
                     Ligatures and handcrafted letterforms play a central role. By mimicking the organic flow and variation of handwritten strokes, typography becomes a bridge between analog craft and digital clarity.            </p>
                 <p>
-                    Designing letterforms on paper allowed us to retain microscopic imperfections—the slight tremble of a line, the uneven taper—that give the experience a warm, human texture. These qualities create a writing system that feels authentically “written,” not generated.
-
+                    Designing letterforms on paper allowed us to retain microscopic imperfections—the slight tremble of a line, the uneven taper. These qualities create a writing system that feels authentically “written” instead of generated.
                 </p>
             </section>
 
@@ -137,11 +139,11 @@
             <div class="grid-col-3of12">
                 <img src="media/mb/img/type_2.png">
             </div>
-            <div class="grid-col-4of12">
-                <img src="media/mb/img/type_3.png">
-            </div>
             <div class="grid-col-5of12">
                 <img src="media/mb/img/type_4.png">
+            </div>
+            <div class="grid-col-4of12">
+                <img src="media/mb/img/type_3.png">
             </div>
         </div>
 
@@ -177,7 +179,7 @@
                         <img src="media/mb/img/line_1.png">
                     </div>
                     <div class="project-video">
-                        <video src="media/mb/vd/line_1.mp4" autoplay loop>
+                        <video src="media/mb/vd/line_1.mp4" autoplay loop></video>
                     </div>
                 </div>
             </section>
@@ -206,7 +208,7 @@
                     <img src="media/mb/img/buttons_2.png">
                 </div>
                 <div class="project-video">
-                    <video src="media/mb/vd/buttons_3.mp4" autoplay loop>
+                    <video src="media/mb/vd/buttons_3.mp4" autoplay loop></video>
                 </div>
             </div>
         </section>
@@ -222,7 +224,7 @@
 
         <section class="visuals-section grid-col-8of12">
             <div class="project-video">
-                <video src="media/mb/vd/icon_2.mp4" autoplay loop>
+                <video src="media/mb/vd/icon_2.mp4" autoplay loop></video>
             </div>
         </section>
     </div>
@@ -231,7 +233,7 @@
         <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Colour</h2>
             <p>
-                Our colour system is optimized for eInk, using a refined grayscale palette to ensure clarity, contrast, and a quiet, premium feel.
+                Our colour system is optimized for e-ink, using a refined grayscale palette to ensure clarity, contrast, and a quiet, premium feel.
             </p>
         </section>
 
@@ -276,7 +278,7 @@
         <section class="writeup-section grid-col-3of12">
             <h2 class="section-title">Interaction Model</h2>
             <p>
-                We defined the interaction model through research into existing eInk devices and real-world handwriting behaviours.
+                We defined the interaction model through research into existing e-ink devices and real-world handwriting behaviours.
             </p>
             <p>
                 The focus: an intuitive, unobtrusive flow that keeps writing at the centre. Interactions feel intentional yet effortless—always supporting the user's creative or practical task.
@@ -304,7 +306,7 @@
 
             <div class="visuals-section grid-col-7of12">
                 <div class="project-video">
-                    <video src="media/mb/vd/flow_0.mp4" autoplay loop>
+                    <video src="media/mb/vd/flow_0.mp4" autoplay loop></video>
                 </div>
             </div>
         </div>
@@ -411,10 +413,10 @@
             </p>
             <div class="grid-row">
                 <div class="grid-col-6of12">
-                    <video src="media/mb/vd/writing_3.mp4" autoplay loop>
+                    <video src="media/mb/vd/writing_3.mp4" autoplay loop></video>
                 </div>
                 <div class="grid-col-6of12">
-                    <video src="media/mb/vd/writing_2.mp4" autoplay loop>
+                    <video src="media/mb/vd/writing_2.mp4" autoplay loop></video>
                 </div>  
             </div>
             
