--- a/work.html
+++ b/work.html
@@ -71,9 +71,9 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2023</h2>
-                  <h2 class="text-wrapper-4">MONTBLANC</h2>
+                  <h2 class="text-wrapper-4">MONTBLANC - DIGITAL PAPER</h2>
                 </div>
-                <span class="text-wrapper-5">[digital paper]</span>
+                <span class="text-wrapper-5">[e-ink experience]</span>
               </div>
             </a>
 
