--- a/work.html
+++ b/work.html
@@ -140,8 +140,8 @@
               </a>  
 
               <a href="montblanc.html" class="hover-swap" data-index="3">
-                <img src="media/index/mb_before.png" class="default-img" alt="Montblanc">
-                <img src="media/index/mb_after.png" class="hover-img" alt="Alternate image">
+                <img src="media/index/mb_before_1.png" class="default-img" alt="Montblanc">
+                <img src="media/index/mb_after_1.png" class="hover-img" alt="Alternate image">
               </a> 
             </div>
 
