--- a/montblanc.html
+++ b/montblanc.html
@@ -135,16 +135,23 @@
             </section>
         </div>
 
-        <div class="grid-row">
-            <div class="grid-col-3of12">
-                <img src="media/mb/img/type_2.png">
-            </div>
-            <div class="grid-col-5of12">
-                <img src="media/mb/img/type_4.png">
-            </div>
-            <div class="grid-col-4of12">
-                <img src="media/mb/img/type_3.png">
-            </div>
+        <div class="grid-row" style="width:calc(100% - 48px)">
+            <section class="grid-col-5of12">
+                <div class="project-image">
+                    <img src="media/mb/img/type_2.png">
+                </div>
+            </section>
+            <section class="grid-col-3of12">
+                <div class="project-image">
+                    <img src="media/mb/img/type_3.png">
+                </div>
+            </section>
+            <section class="grid-col-4of12">
+                <div class="project-image">
+                    <img src="media/mb/img/type_4.png">
+                </div>
+            </section>
+            
         </div>
 
         <div class="grid-row">
@@ -274,7 +281,32 @@
         </section>
     </div>
 
-     <div class="grid-row">
+    <div class="wrapper">
+        <div class="grid-row">
+            <section class="writeup-section grid-col-4of12">
+                <h2 class="section-title">Wordmark</h2>
+                <p>
+                    We extended the Montblanc wordmark by adding Digital Paper beneath it, using design cues from traditional writing instruments. The 45-degree angles echo nib strokes, while varied stroke widths reflect pressure sensitivity. An ink-like brush texture ties it back to the feel of handwriting.
+                </p>
+            </section>
+
+            <section class="visuals-section grid-col-8of12">
+                <div class="project-image">
+                    <img src="media/mb/img/wordmark_1.png">
+                </div>
+            </section>
+        </div>
+
+        <div class="grid-row">
+            <div class="grid-col-12of12">
+                <div class="project-image">
+                    <img src="media/mb/img/wordmark_2.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="grid-row">
         <section class="writeup-section grid-col-3of12">
             <h2 class="section-title">Interaction Model</h2>
             <p>
@@ -297,10 +329,10 @@
             <section class="writeup-section grid-col-5of12">
                 <h2 class="section-title">Onboarding Flow</h2>
                 <p>
-                    The onboarding experience blends Montblanc storytelling with light, playful touchpoints. Users are gradually introduced to key device features, guided through the writing feel, and shown the metaphors rooted in Montblanc craft — such as nib-testing gestures and pressure-responsive strokes.
+                    The onboarding experience mixes Montblanc's storytelling with light, playful moments. Instead of overwhelming users, it gently walks them through the core features — from how the writing feels to small nods to Montblanc's craft, like nib-testing gestures and pressure-sensitive strokes.
                 </p>
                 <p>
-                    Through extensive testing of structure, timing, and clarity, the flow became both educational and delightfully welcoming — making eInk technology feel instantly familiar.
+                    After lots of testing around flow, timing, and clarity, the walkthrough became both easy to follow and familiar right from the start.
                 </p>
             </section>
 
