--- a/montblanc.html
+++ b/montblanc.html
@@ -334,6 +334,9 @@
                 <p>
                     After lots of testing around flow, timing, and clarity, the walkthrough became both easy to follow and familiar right from the start.
                 </p>
+                <p>
+                    The Montblanc emblem acts as a progress indicator, revealing itself step by step, creating a sense of ownership and connection to the brand and device.
+                </p>
             </section>
 
             <div class="visuals-section grid-col-7of12">
@@ -343,97 +346,90 @@
             </div>
         </div>
 
-        <div class="grid-row">
-            <div class="grid-col-2of12">
+        <div class="grid-row" style="width:calc(100% - 56px)">
+            <div class="grid-col-3of12">
+                <img src="media/mb/img/flow_0.png">
+            </div>
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_1.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_2.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_3.png">
             </div>
-            <div class="grid-col-2of12">
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 56px)">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_4.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_5.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_6.png">
             </div>
-        </div>
-
-        <div class="grid-row">
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_7.png">
             </div>
-            <div class="grid-col-2of12">
+        </div>
+
+        <div class="grid-row" style="width:calc(100% - 56px)">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_8.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_9.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_10.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_11.png">
-            </div>
-            <div class="grid-col-2of12">
-                <img src="media/mb/img/flow_12.png">
             </div>
         </div>
 
-        <div class="grid-row">
-            <div class="grid-col-2of12">
+        <div class="grid-row" style="width:calc(100% - 56px)">
+            <div class="grid-col-3of12">
+                <img src="media/mb/img/flow_12.png">
+            </div>
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_13.png">
             </div>
-            <div class="grid-col-2of12">
+            <div class="grid-col-3of12">
                 <img src="media/mb/img/flow_14.png">
-            </div>
-            <div class="grid-col-2of12">
-                <img src="media/mb/img/flow_15.png">
-            </div>
-            <div class="grid-col-2of12">
-                <img src="media/mb/img/flow_16.png">
-            </div>
-            <div class="grid-col-2of12">
-                <img src="media/mb/img/flow_17.png">
-            </div>
-            <div class="grid-col-2of12">
-                <img src="">
             </div>
         </div>
     </div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Home</h2>
             <p>
-                The home screen expresses Montblanc's refined craftsmanship through its restrained visual language. Handcrafted icons and delicate linework introduce tactility without overwhelming the space.
+                The Home screen brings Montblanc's craftsmanship into a calm andminimal environment. Hand-drawn icons and fine linework add a subtle sense of tactility without distracting from the content. The layout stays open so notebooks, documents, and folders remain the clear focus.
             </p>
             <p>
-                A floating toolbar anchors key actions while maintaining a clutter-free layout.
+                A floating bottom toolbar provides the primary actions. When an item is selected, the toolbar intelligently shifts into contextual mode, revealing only the actions relevant to that selection. This approach keeps interactions simple and discoverable.
             </p>
         </section>
 
-        <div class="grid-row grid-col-7of12">
-            <div class="grid-col-3of12">
+        <section class="grid-col-3of12">
+            <div class="project-image">
                 <img src="media/mb/img/home_1.png">
             </div>
-            <div class="grid-col-3of12">
+        </section>
+        <section class="grid-col-3of12">
+            <div class="project-image">
                 <img src="media/mb/img/home_2.png">
             </div>
-            <div class="grid-col-3of12">
-                <img src="media/mb/img/home_3.png">
-            </div>
-            </div>
-        </div>
+        </section>
+
     </div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Writing</h2>
             <p>
                 The writing environment is designed for full immersion. Tools remain hidden until needed, allowing the page to become the purest expression of digital handwriting.
@@ -454,7 +450,7 @@
             
         </section>
 
-        <section class="visuals-section grid-col-7of12">
+        <section class="visuals-section grid-col-8of12">
             <div class="project-image">
                 <img src="media/mb/img/writing_1.png">
             </div>
