--- a/toyota.html
+++ b/toyota.html
@@ -31,7 +31,13 @@
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">TOYOTA</h1>
             <p>
-                To enhance the Toyota & Lexus Digital Experience Platform, we were tasked with reimagining its navigation—fixing existing issues while creating a smoother, more intuitive way for users to explore the brand ecosystem. The challenge was to design a refined, scalable system that could adapt to diverse market requirements and user expectations worldwide. Our ambition was to strike the right balance between discoverability and efficiency, ensuring users can easily explore and quickly access what they need without friction.
+                The ask: To enhance the digital navigation for Toyota and Lexus across their 40+ European markets, fix existing errors, and provide an intuitive and hassle-free way of discovering the world of Toyota
+            </p>
+            <p>
+                The challenge: To design an elevated navigation system that addresses various market requirements and consumer needs.
+            </p>
+            <p>
+                The ambition: To balance discoverability (the user's ability to find items) and eﬃciency (the user's ability to quickly find items without errors)
             </p>
 
             <ul class="project-specs">
@@ -288,7 +294,7 @@
             <section class="writeup-section grid-col-5of12">
                 <h2 class="section-title">Content Guidelines</h2>
                 <p>
-                    To ensure clarity and consistency across markets, we developed a set of navigation content guidelines. These covered tone of voice, labeling conventions, and hierarchy principles, ensuring users can quickly understand and interact with menus regardless of language or region.
+                    To ensure clarity and consistency across markets, we developed a set of navigation content guidelines. These covered tone of voice, labeling conventions, and hierarchy principles, ensuring users can quickly understand and interact with the navigation regardless of language or region.
                 </p>
             </section>
         </div>
