nov 27 updated project titles to be same as home

--- a/photography.html
+++ b/photography.html
@@ -30,8 +30,20 @@
     
     <div class="grid-row" style="width:calc(100% - 24px) ">
         <section class="writeup-section grid-col-5of12">
+
+            <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2024</h2>
+                  	<h2 class="text-wrapper-4">PHOTOGRAPHY</h2>
+                </div>
+                <span class="text-wrapper-5">[visual experiments]</span>
+              </div>
+            </div>
+<!--
+
             <h1 class="project-title">Photography</h1>
-            <p>
+        -->
                 A collection of photography-led experiments where I play with transparency, layering, and texture to create new visual narratives. This ongoing series focuses on process over perfection — exploring how visuals can evolve beyond static frames through unexpected combinations.
             </p>
         </section>
