--- a/puma.html
+++ b/puma.html
@@ -29,7 +29,20 @@
 
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
+
+			<div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2019</h2>
+                  	<h2 class="text-wrapper-4">PUMA: RUN MY WAY 管我怎么跑</h2>
+                </div>
+                <span class="text-wrapper-5">[interactive installation]</span>
+              </div>
+            </div>
+<!--
+			
             <h1 class="project-title">PUMA: RUN MY WAY 管我怎么跑</h1>
+		-->
             <p>
                 As part of Puma's Hybrid Astro campaign, we created an interactive pop-up pavilion in one of Shanghai's busiest districts, inviting people to experience the shoes through exploration rather than competition. Visitors customized their own Puma avatar, then stepped onto a treadmill where their movements powered a journey through three imaginative virtual worlds—celebrating the idea of running your own way.
             </p>
