--- a/toyota.html
+++ b/toyota.html
@@ -29,7 +29,20 @@
 
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
+
+            <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2022</h2>
+                  	<h2 class="text-wrapper-4">TOYOTA</h2>
+                </div>
+                <span class="text-wrapper-5">[global navigation]</span>
+              </div>
+            </div>
+<!--
+
             <h1 class="project-title">TOYOTA</h1>
+        -->
             <p>
                 The ask: To enhance the digital navigation for Toyota and Lexus across their 40+ European markets, fix existing errors, and provide an intuitive and hassle-free way of discovering the world of Toyota
             </p>
