--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
-                  <h2 class="text-wrapper-4">Photography</h2>
+                  <h2 class="text-wrapper-4">PHOTOGRAPHY</h2>
                 </div>
                 <span class="text-wrapper-5">[visual experiments]</span>
               </div>
@@ -71,7 +71,7 @@
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2023</h2>
-                  <h2 class="text-wrapper-4">MONTBLANC - DIGITAL PAPER</h2>
+                  <h2 class="text-wrapper-4">MONTBLANC DIGITAL PAPER</h2>
                 </div>
                 <span class="text-wrapper-5">[e-ink experience]</span>
               </div>
