--- a/alice.html
+++ b/alice.html
@@ -30,7 +30,19 @@
      <div class="wrapper">
         <div class="grid-row" style="width:calc(100% - 48px)">
             <section class="writeup-section grid-col-4of12">
+
+                <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2019</h2>
+                  	<h2 class="text-wrapper-4">ALICE'S ADVENTURES IN WONDERLAND</h2>
+                </div>
+                <span class="text-wrapper-5">[print]</span>
+              </div>
+            </div>
+<!--
                 <h1 class="project-title">ALICE'S ADVENTURES IN WONDERLAND</h1>
+        -->
                 <p>
                     I redesigned multiple spreads from Alice's Adventures in Wonderland by Lewis Carroll, using the book's rumored psychedelic influences as the foundation for a bold visual reinterpretation. Here are a few of the final spreads.
                 </p>
