--- a/jde.html
+++ b/jde.html
@@ -28,7 +28,20 @@
 
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
+
+            <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2024</h2>
+                  	<h2 class="text-wrapper-4">JACOBS DOUWE EGBERTS</h2>
+                </div>
+                <span class="text-wrapper-5">[whitelabel design system]</span>
+              </div>
+            </div>
+<!--
+
             <h1 class="project-title">JACOBS DOUWE EGBERTS</h1>
+        -->
 
             <p>
                 With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts needed a scalable design solution to unify their digital presence while preserving each brand's unique identity. Many of the brands lacked formal design guidelines, leading to inconsistent user experiences and inefficient development cycles.
