--- a/lufthansa.html
+++ b/lufthansa.html
@@ -29,9 +29,21 @@
 
     <div class="grid-row" style="width:calc(100% - 24px)">
         <section class="writeup-section grid-col-5of12">
+			
+			<div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2019</h2>
+                  	<h2 class="text-wrapper-4">LUFTHANSA: #LIFECHANGINGPLACES</h2>
+                </div>
+                <span class="text-wrapper-5">[image recognition]</span>
+              </div>
+            </div>
+<!--
             <h1 class="project-title">LUFTHANSA: #LIFECHANGINGPLACES</h1>
-            <p>
-                As the largest German airline, Lufthansa believes that travel has the power to transform. The #LifeChangingPlaces campaign embraces that spirit by helping users discover meaningful destinations inspired in their current surroundings.
+			<span class="text-wrapper-5">[image recognition]</span>
+		-->
+                As the largest German airline, Lufthansa believes that travel has the power to transform. The #LifeChangingPlaces campaign embraces that spirit by helping users discover meaningful destinations inspired by their current surroundings.
             </p>
             <p>
 				We built a mobile web app powered by Google Cloud Vision to analyze a user's photo and match key visual cues to destinations across Lufthansa's network—creating a seamless, almost “magical” reveal of their next potential journey.
@@ -56,22 +68,17 @@
             <section class="writeup-section grid-col-4of12">
                 <h2 class="section-title">User and Conversation Flow</h2>
                 <p>
-					We created user and conversation flows that move seamlessly from capture to reveal, supported by a friendly, concise tone aligned with Lufthansa's voice. Each step is designed to guide without overwhelming, making the journey feel natural and inspiring.
+					We adopted a concise, friendly conversational tone that reflects Lufthansa's voice and encourages exploration without overwhelming the user.
                 </p>
             </section>
         </div>
 
         <div class="grid-row">
-            <section class="grid-col-11of12">
+            <section class="grid-col-12of12">
 				<div class="project-image">
-					<img src="media/lufthansa/img/userflow_1.png">
+					<img src="media/lufthansa/img/flow.png">
 				</div>
 			</section>
-			<section class="grid-col-1of12">
-                <div class="project-image">
-                    <img src="media/lufthansa/img/conversation_1.png">
-                </div>
-            </section>
         </div>
     </div>
 
