--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -28,8 +28,20 @@
     
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
-            <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
 
+            <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2024</h2>
+                  	<h2 class="text-wrapper-4">MARINA ABRAMOVIĆ</h2>
+                </div>
+                <span class="text-wrapper-5">[microsite]</span>
+              </div>
+            </div>
+<!--
+
+            <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
+        -->
             <p>
                 During an internal design hackathon, I had to create an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event’s key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
             </p>
