--- a/montblanc.html
+++ b/montblanc.html
@@ -29,7 +29,20 @@
 
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
+
+            <div class="frame-3" data-index="6">
+              <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                <div class="gallery-caption">
+					<h2 class="text-wrapper-4">2023</h2>
+                  	<h2 class="text-wrapper-4">MONTBLANC DIGITAL PAPER</h2>
+                </div>
+                <span class="text-wrapper-5">[e-ink experience]</span>
+              </div>
+            </div>
+<!--
+
             <h1 class="project-title">MONTBLANC</h1>
+        -->
             <p>
                 Montblanc, a legacy brand renowned for its mastery in luxury writing instruments, has continuously evolved to cater to the modern achiever. The brand embarked on a bold journey to merge the timeless elegance of handwriting with the cutting-edge digital experience of an e-ink device.
             </p>
